fix author-less cocktails description spacing

--- a/htdocs/t/cocktail/cocktail.css
+++ b/htdocs/t/cocktail/cocktail.css
@@ -106,10 +106,10 @@
 #show-legend { cursor: pointer; }
 
 #main-content { padding: 20px 35px 0 225px; }
-#main-content .description { font-size: 120%; line-height: 1.25; }
+#main-content .description { font-size: 120%; line-height: 1.25; margin-bottom: 20px; }
 #main-content .description .summary { position: relative; font-size: 14px; font-weight: bold; padding: 0 0 12px 16px; margin-left: -16px; }
 #main-content .description .summary i { position: absolute; left: -5px; top: 4px; width: 16px; height: 10px; background-position: -420px -25px; }
-#main-content .author { font-size: 110%; padding: 20px 0 5px 0; }
+#main-content .author { font-size: 110%; padding: 0 0 5px 0; }
 #main-content .tags { font-size: 110%; padding: 0 0 50px 0; }
 #main-content .tags .tag { text-transform: lowercase; }
 #main-content .tags .tag:after { content: ',' }
